--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,20 @@ android {
             abiFilters  "arm64-v8a",  "armeabi-v7a"
         }
     }
-
+    dexOptions {
+        javaMaxHeapSize "6g"
+        preDexLibraries = false
+    }
+    lintOptions {
+        abortOnError false
+        checkOnly 'Interoperability'
+        checkReleaseBuilds false
+        disable 'MissingTranslation'
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -30,16 +43,14 @@ android {
 }
 
 dependencies {
-//    api fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
+    api fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
     api 'androidx.recyclerview:recyclerview:1.1.0'
     api 'androidx.annotation:annotation:1.1.0'
     api 'androidx.appcompat:appcompat:1.3.0-alpha02'
     api 'com.google.android.material:material:1.2.1'
     api 'com.github.bumptech.glide:glide:4.11.0'
-    implementation project(path: ':imageselector')
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     api project(path: ':compress')
-    api project(path: ':imageselector')
     implementation 'com.github.ewgcat:JackPermissions:1.0.0'
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
