--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+}
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -14,8 +16,9 @@ android {
         resConfigs "zh"
         flavorDimensions 'cpuArch'
         ndk {
-            abiFilters  "arm64-v8a",  "armeabi-v7a"
+            abiFilters 'armeabi-v7a','arm64-v8a'
         }
+
     }
     dexOptions {
         javaMaxHeapSize "6g"
@@ -23,13 +26,15 @@ android {
     }
     lintOptions {
         abortOnError false
-        checkOnly 'Interoperability'
         checkReleaseBuilds false
         disable 'MissingTranslation'
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
     buildTypes {
         release {
@@ -53,11 +58,12 @@ dependencies {
     api 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     api project(path: ':compress')
-    implementation 'com.github.ewgcat:JackPermissions:1.0.0'
+    implementation 'com.github.getActivity:XXPermissions:8.8'
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.11'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+}
 
-}
-repositories {
-    mavenCentral()
-}
+
